#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psana_examples
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-04-17
2014-06-14 David Schneider
- update DumpBld.cpp for BldDataFEEGasDetEnergyV1

Tag: V00-04-16
2014-04-30 Mikhail Dubrovin
- DumpDamage.h - fix doxygen documentation problem

Tag: V00-04-15
2014-03-21 Mikhail Dubrovin
- in DumpPimax change comment from Princeton::FrameV1 to Pimax::FrameV1
	
Tag: V00-04-14
2014-03-17 Mikhail Dubrovin
- add DumpPimax, tested for exp=amob5114:run=16
- in DumpOceanOptics.cpp add ConfigV2 and DataV2

Tag: V00-04-13
2014-03-10 David Schneider
- DumpBld: dump EBeamV5

Tag: V00-04-12
2014-02-26 David Schneider
- fixed DumpDamage so that its documentation will be added to the group

Tag: V00-04-11
2014-02-12 David Schneider
- updated for psddldata V01-00-03
- DumpPartition and dump_partition
- DumpDamage - add dump about src only, split event damage

Tag: V00-04-10
2014-01-17 Andy Salnikov
- DumpAndor: default source was for Acqiris

Tag: V00-04-09
2014-01-13 Andy Salnikov
- DumpAcqiris: source was hardcoded

Tag: V00-04-08
2013-12-19 Andy Salnikov
- add C++ and python examples for epix

Tag: V00-04-07
2013-12-16 David Schneider
- add C++ module DumpDamage

Tag: V00-04-06
2013-12-02 Andy Salnikov
- add C++ modules DumpEpixSampler and DumpRayonix
- add Python module dump_epixsampler

Tag: V00-04-05
2013-10-07 Andy Salnikov
- add C++ modules for Alias and L3T
- add control.ConfigV3 class to C++ DumpControl module
- add bld.BldDataEBeamV4 class to C++ DumpBld module
- add bld.BldDataSpectrometerV0 class to C++ DumpBld module
- add python modules for Alias, L3T, and Evr

Tag: V00-04-04
2013-09-17 Andy Salnikov