@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-18
+2014-07-18 David Schneider
+- add DumpDgram to show how to work with XtcInput::DgramList
+  trac ticket:279
+	
 Tag: V00-04-17
 2014-06-14 David Schneider
 - update DumpBld.cpp for BldDataFEEGasDetEnergyV1
